--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask-SocketIO==5.3.6
 folium==0.17.0
 geographiclib==2.0
 geopy==2.4.1
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.7
 importlib-metadata==8.2.0
